[package]
name = "neverwhere-gpt"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.18"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.164", features = ["serde_derive"] }
serde_json = "1.0.99"
shuttle-axum = "0.20.0"
shuttle-runtime = "0.20.0"
tokio = "1.28.2"
turnout = { git="https://github.com/yasushisakai/turnout.git" }
